# suricata-ipc

./: .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  build.rs  lefthook.yml
.github/workflows/: rust.yml
benches/: bench.rs
docker/: Dockerfile  kafka-docker-compose.yml
examples/custom-rules/: Cargo.toml  lefthook.yml
examples/custom-rules/resources/: rules.json
examples/custom-rules/src/: main.rs  rules.rs
examples/kafka/: Cargo.toml  lefthook.yml
examples/kafka/docker/: Dockerfile  docker-compose.yml
examples/kafka/src/: kafka.rs  main.rs  packet.rs
examples/pcap-file/: Cargo.toml
examples/pcap-file/src/: main.rs
ipc-plugin/: .gitignore  CMakeCache.txt  CMakeLists.txt
ipc-plugin/cmake/: FindCbindgen.cmake  FindNspr.cmake  FindPcre.cmake  FindSuricata.cmake
ipc-plugin/ipc-plugin-rs/: CMakeLists.txt  Cargo.toml
ipc-plugin/ipc-plugin-rs/src/: lib.rs
ipc-plugin/src/: bindings.h  plugin.c  runmode-ipc.c  runmode-ipc.h  source-ipc.c  source-ipc.h
plugins/cmake/: FindJansson.cmake  FindMagic.cmake  FindNspr.cmake  FindNss.cmake
plugins/ipc-plugin/: CMakeLists.txt  README.md
plugins/ipc-plugin/ipc-plugin-rs/: CMakeLists.txt  Cargo.toml  cbindgen.toml
plugins/ipc-plugin/ipc-plugin-rs/src/: lib.rs
plugins/ipc-plugin/src/: runmode-ipc.c  runmode-ipc.h  source-ipc.c  source-ipc.h
plugins/kafka-plugin/: .gitignore  CMakeLists.txt
plugins/kafka-plugin/kafka-plugin-rs/: CMakeLists.txt  Cargo.toml  cbindgen.toml
plugins/kafka-plugin/kafka-plugin-rs/src/: client.rs  errors.rs  lib.rs
plugins/kafka-plugin/src/: bindings.h  plugin.c
protos/: suricata_eve.proto
resources/: test.rules
src/: config.rs  errors.rs  lib.rs  serde_helpers.rs
src/config/: eve.rs  filestore.rs  ipc_plugin.rs  mod.rs  output.rs  plugin.rs
src/eve/: json.rs  mod.rs  reader.rs
src/eve/message/: alert.rs  date_format.rs  dns.rs  file.rs  flow.rs  http.rs  mod.rs  smtp.rs  stats.rs  tcp.rs  tls.rs
src/intel/: mod.rs  rules.rs  tracer.rs
templates/: custom.yaml.in  filestore.yaml.in  http.yaml.in  ipc-plugin.yaml.in  redis.yaml.in  suricata.yaml.in  uds.yaml.in
tests/: integration_tests.rs  intel_tests.rs  kafka_plugin_tests.rs
