[package]
name = "bellini"
version = "0.1.0"
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
askama = "0.8"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
packet-ipc = "0.8"
pin-project = "0.4.0-alpha.9"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-io = "0.2.0-alpha.6"
tokio-net = { version = "0.2.0-alpha.6", features = ["process", "uds"] }

[dev-dependencies]
async-trait = "0.1"
criterion = "0.2"
env_logger = "0.6"
net-parser-rs = { git = "https://github.com/protectwise/net-parser-rs.git", branch = "api-cleanup" }
tempfile = "3.0"
tokio = "0.2.0-alpha.6"

[[bench]]
path = "benches/bench.rs"
name = "benches"
harness = false
