[package]
name = "bellini"
version = "0.1.0"
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
askama = "0.8"
chrono = "0.4"
failure = { version = "0.1", features = ["derive"] }
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
packet-ipc = "0.10"
pin-project = "0.4.0-alpha.9"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["io-util", "process", "stream", "uds"] }

[dev-dependencies]
async-trait = "0.1"
criterion = "0.2"
env_logger = "0.7"
net-parser-rs = { git = "https://github.com/protectwise/net-parser-rs.git", branch = "master" }
tempfile = "3.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }

[[bench]]
path = "benches/bench.rs"
name = "benches"
harness = false
