[package]
name = "suricata-ipc"
version = "0.12.3"
authors = ["dbcfd <bdbrowning2@gmail.com>"]
edition = "2018"
description = "Library for sending packets to suricata and receiving output."
license = "MIT OR Apache-2.0"
repository = "https://github.com/protectwise/suricata-ipc/"
readme = "README.md"
keywords=["pcap","packet","network"]
categories=["encoding","network-programming","parsing"]
exclude = ["resources/*.pcap"]

[dependencies]
askama = "0.10"
chrono = "0.4"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
packet-ipc = "0.14"
pin-project = "0.4"
prost = { version = "0.6", optional = true }
prost-types = { version = "0.6", optional = true }
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "1.2"
thiserror = "1"
tonic = { version = "0.2", optional = true }

[dev-dependencies]
async-trait = "0.1"
criterion = "0.2"
env_logger = "0.7"
futures = "0.3"
net-parser-rs = "0.2"
tempfile = "3.0"

[build-dependencies]
tonic-build = { version = "0.2", optional = true }

[features]
default = []
protobuf = ["prost", "prost-types", "tonic", "tonic-build"]

[[bench]]
path = "benches/bench.rs"
name = "benches"
harness = false
