[package]
name = "bellini-example-kafka"
version = "0.1.0"
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
bellini = { git = "https://dbcfd:0aec2c8ecb94e901d09fa5218fd0dbc6a1ec5827@github.com/dbcfd/bellini.git" }
env_logger = "0.7"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
log = "0.4"
net-parser-rs = { git = "https://github.com/protectwise/net-parser-rs.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.0-alpha.6"
url = { version = "2.1", features = ["serde"] }