[package]
name = "suricata-rs-example-rules"
version = "0.1.0"
authors = ["dbcfd <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
futures = "0.3"
log = "0.4"
net-parser-rs = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
suricata-ipc = "0.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
url = { version = "2.1", features = ["serde"] }
