[package]
name = "bellini-example-kafka"
version = "0.1.0"
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
bellini = { path = "../../" }
env_logger = "0.7"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
log = "0.4"
net-parser-rs = { git = "https://github.com/protectwise/net-parser-rs.git", branch = "master" }
rdkafka = { git = "https://github.com/dbcfd/rust-rdkafka.git", branch = "no-futures-executor" }
serde_json = "1.0"
tokio = "0.2.0-alpha.6"