[package]
name = "suricata-ipc-example-kafka"
version = "0.1.0"
authors = ["dbcfd <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
suricata-ipc = "0.1"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
net-parser-rs = "0.2"
rdkafka = { git = "https://github.com/dbcfd/rust-rdkafka.git", branch = "no-futures-executor" }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
