[package]
name = "bellini-example-pcap"
version = "0.1.0"
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
bellini = { path = "../../" }
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
net-parser-rs = { git = "https://github.com/protectwise/net-parser-rs.git", branch = "master" }
tokio = "0.2.0-alpha.6"