[package]
name = "suricata-rs-example-pcap"
version = "0.1.0"
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
edition = "2018"

[dependencies]
suricata-rs = { path = "../../" }
futures = "0.3"
net-parser-rs = { git = "https://github.com/protectwise/net-parser-rs.git", branch = "master" }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }