[package]
name = "ipc-plugin-rs"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true

[dependencies]
log = "0.4"
packet-ipc = { git = "https://github.com/protectwise/packet-ipc.git", branch = "bounded-channel" }

suricata = { path = "/build/suricata/rust" }

